src/test/deca/avecObjet/valid/test_poly.deca
// Description :
//    Test d'accès et modification d'un champ via méthodes d'une classe (get/set).
//
// Resultats :
//    Affiche : a.getX() = 1

class A {
    protected int x ;
    int getX(){
        return x ;
    }
    void setX(int x){
        this.x = x;
    }
}

{
    A a = new A();

    a.setX(1) ;
    println("a.getX() = ", a.getX());
}