src/test/deca/avecObjet/invalid/assign_to_protected_field_custom.deca
// Description :
// tentative d'affecter un champ protected depuis une autre classe
//
// Resultats :
//    Erreur contextuelle
//    Ligne 15 : La classe actuelle J n'a pas accès au champ protégé de ParentField

class ParentField {
    protected int val;
}

class J {
    void test() {
        ParentField p = new ParentField();
        p.val = 42; // doit échouer
    }
}
